fixed project title alignment and footer alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,10 +93,12 @@ footer {
 
     color: whitesmoke;
     font-size: 12px;
-    text-align: center;
-    
+    text-align: center
 }
 
+#footer-container {
+    margin: auto;
+}
 
 
 /* ABOUT ME PAGE */
@@ -146,7 +148,7 @@ footer {
     margin: 0px;
 
     position: relative;
-    bottom: 75px;
+    bottom: 60px;
 
     pointer-events: none;
 }
@@ -156,7 +158,7 @@ footer {
     height: 200px;
 }
 
-#p1, #p2, #p3, #p4, #p5 {
+#p1, #p2, #p3, #p4, #p5, #p6 {
     display: inline-block;
 }
 
